--- a/src/app/components/article-detail/article-detail.component.html
+++ b/src/app/components/article-detail/article-detail.component.html
@@ -2,7 +2,7 @@
 <div class="container content-space-4" *ngIf="article">
     <div class="row justify-content-lg-between align-items-lg-center">
 
-      <div id="cart-alert" class="alert alert-primary" role="alert" style="display:none;"></div>
+      <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
 
       <div class="col-lg-4 mb-5 mb-lg-0">
         <img class="img-fluid rounded-3" [src]="'data:image/png;base64,' + article.image" alt="Image Description">
