--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <main id="content" role="main">
-  <div id="cart-alert" class="alert alert-primary" role="alert" style="display:none;"></div>
+  <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
   <!-- Search by title -->
   <div class="overflow-hidden content-space-t-2 ">
     <div class="container content-space-1">
