--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <main id="content" role="main" class="flex-grow-1 overflow-hidden content-space-1 mt-5">
-  <div id="cart-alert" class="alert alert-danger" role="alert" style="display:none;"></div>
+  <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
     <!-- Content -->
     <div class="container">
       <div class="mx-lg-auto mt-5" style="max-width: 55rem;">
