--- a/src/app/components/legal-mention/legal-mention.component.html
+++ b/src/app/components/legal-mention/legal-mention.component.html
@@ -1,54 +1,41 @@
 <main id="content" role="main" class="flex-grow-1 overflow-hidden mt-5">
 <!-- Content -->
-<div class="container  content-space-t-1 content-space-b-2 mt-5">
+<div class="container  content-space-t-2 content-space-b-2 mt-5">
     <div class="w-lg-75 mx-lg-auto">
       <!-- Card -->
       <div class="card card-lg card-shadow">
         <!-- Header -->
         <div class="card-header bg-dark">
-          <h1 class="card-title h2 text-white">Privacy & Policy</h1>
-          <p class="card-text text-white">Last modified: March 27, 2018 (view archived versions)</p>
+          <h1 class="card-title h2 text-white">Mentions Légales</h1>
         </div>
         <!-- End Header -->
-  
+
         <!-- Card Body -->
         <div class="card-body">
           <div class="mb-7">
-            <h4>Introduction</h4>
-  
-            <p>Thanks for using our products and services ("Services"). The Services are provided by Pixeel Ltd. ("Unify"), located at 153 Williamson Plaza, Maggieberg, MT 09514, England, United Kingdom.</p>
-  
-            <p>By using our Services, you are agreeing to these terms. Please read them carefully.</p>
-  
-            <p>Our Services are very diverse, so sometimes additional terms or product requirements (including age requirements) may apply. Additional terms will be available with the relevant Services, and those additional terms become part of your agreement with us if you use those Services.</p>
+              <p>M2i est propriétaire du site l2i.com</p>
+              <p>M2i, société anonyme au capital de 512 598,50 euros, immatriculée au RCS de Paris sous le numéro 333 544 153</p>
+              <p>Siège social : 146/148 rue de Picpus – 75012 PARIS</p>
+              <p>Numéro de téléphone : 01 44 53 36 00</p>
           </div>
-  
+
           <div class="mb-7">
-            <h4>Using our services</h4>
-  
-            <p>You must follow any policies made available to you within the Services.</p>
-  
-            <p>Don't misuse our Services. For example, don't interfere with our Services or try to access them using a method other than the interface and the instructions that we provide. You may use our Services only as permitted by law, including applicable export and re-export control laws and regulations. We may suspend or stop providing our Services to you if you do not comply with our terms or policies or if we are investigating suspected misconduct.</p>
-  
-            <p>Using our Services does not give you ownership of any intellectual property rights in our Services or the content you access. You may not use content from our Services unless you obtain permission from its owner or are otherwise permitted by law. These terms do not grant you the right to use any branding or logos used in our Services. Don't remove, obscure, or alter any legal notices displayed in or along with our Services.</p>
+            <h4>Médiateur de la consommation</h4>
+            <p>Conformément aux articles L.616-1 et R.616-1 du code de la consommation, notre société a mis en place un dispositif de médiation de la consommation. L’entité de médiation retenue est : ANM Conso. En cas de litige, le consommateur pourra déposer sa réclamation sur le site : https://www.anm-conso.com/</p>
+            <p>ou par voie postale en écrivant à :<br>
+              ANM Conso<br>
+              2, rue de Colmar – 94300 VINCENNES
+            </p>
           </div>
-  
+
           <div class="mb-7">
-            <h4>Privacy and copyright protection</h4>
-  
-            <p>Unify's privacy policies explain how we treat your personal data and protect your privacy when you use our Services. By using our Services, you agree that Unify can use such data in accordance with our privacy policies.</p>
-  
-            <p>We respond to notices of alleged copyright infringement and terminate accounts of repeat infringers according to the process set out in the U.S. Digital Millennium Copyright Act.</p>
-  
-            <p>We provide information to help copyright holders manage their intellectual property online. If you think somebody is violating your copyrights and want to notify us, you can find information about submitting notices and Unify's policy about responding to notices in our Help Center.</p>
+            <h4>Droits d'Auteur</h4>
+            <p>Les données publiées et les marques citées sur le Site sont la propriété exclusive de leurs titulaires respectifs. Toute reproduction totale ou partielle de ces textes, marques et/ou logos, effectuée à partir des éléments du site sans l’autorisation expresse de leurs propriétaires est donc prohibée, au sens de l’article L. 713-2 du Code de la propriété intellectuelle.</p>
           </div>
-  
+
           <div class="mb-7">
-            <h4>Your content in our services</h4>
-  
-            <p>Some of our Services allow you to upload, submit, store, send or receive content. You retain ownership of any intellectual property rights that you hold in that content. In short, what belongs to you stays yours.</p>
-  
-            <p>When you upload, submit, store, send or receive content to or through our Services, you give Unify (and those we work with) a worldwide license to use, host, store, reproduce, modify, create derivative works (such as those resulting from translations, adaptations or other changes we make so that your content works better with our Services), communicate, publish, publicly perform, publicly display and distribute such content. The rights you grant in this license are for the limited purpose of operating, promoting, and improving our Services, and to develop new ones. This license continues even if you stop using our Services (for example, for a business listing you have added to Unify Maps). Some Services may offer you ways to access and remove content that has been provided to that Service. Also, in some of our Services, there are terms or settings that narrow the scope of our use of the content submitted in those Services. Make sure you have the necessary rights to grant us this license for any content that you submit to our Services.</p>
+            <h4>Décharge de responsabilité</h4>
+            <p>M2i ne donne aucune garantie, explicite ou implicite, et n’assume aucune responsabilité relative à l’utilisation du Site. A ce titre, M2i ne peut être redevable à un utilisateur ou une autre partie, des dommages directs ou indirects, spéciaux, particuliers ou accessoires découlant de l’utilisation de ce site ou d’un autre site relié par un hyperlien. Certaines informations et données disponibles sur le Site sont produites par des tiers : M2i s’engage à faire le maximum pour en garantir un caractère fiable, pertinent, exact et exhaustif, mais ne saurait être tenue pour responsable des erreurs, d’une absence de disponibilité des informations et/ou de la présence de virus sur son site. La teneur de tout retour d’information vers M2i sera réputée être non confidentielle et libre de droit. Sauf accord préalable, explicite, M2i pourra utiliser librement les idées, concepts, le savoir-faire ou les techniques contenus dans cette communication à toutes fins utiles, sans restriction, pour reproduire et divulguer toute information à des tiers. Tout utilisateur reconnaît la compétence exclusive des tribunaux de Paris pour tout différend portant sur les conditions Générales ou le site.</p>
           </div>
         </div>
         <!-- End Card Body -->
