--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,6 +2,12 @@
     <!-- Content -->
     <div class="container content-space-t-1 content-space-b-2 mt-5">
       <div class="mx-lg-auto mt-5" style="max-width: 55rem;">
+        <div class="d-flex justify-content-center">
+          <div class="col-lg-8">
+            <div id="cart-success" class="alert alert-primary" role="alert" style="display:none;"></div>
+            <div id="cart-error" class="alert alert-danger" role="alert" style="display:none;"></div>
+          </div>
+        </div>
         <div class="d-flex justify-content-center align-items-center flex-column min-vh-lg-100">
           <div class="position-relative">
             <!-- Card -->
