--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
                   </div>
                 </datalist>
               </div>
-              <button type="submit" class="btn btn-dark btn-lg"><i class="bi-search"></i></button>
+              <button type="submit" class="btn btn-dark btn-lg" aria-label="Rechercher"><i class="bi-search"></i></button>
             </div>
             <!-- End Input Card -->
 
@@ -90,7 +90,7 @@
                   <option *ngFor="let author of authorList" [value]="author.firstname + ' ' + author.lastname"></option>
                 </datalist>
               </div>
-              <button type="submit" class="btn btn-dark btn-lg"><i class="bi-search"></i></button>
+              <button type="submit" class="btn btn-dark btn-lg" aria-label="Rechercher"><i class="bi-search"></i></button>
             </div>
             <!-- End Input Card -->
 
