--- a/src/app/components/admin-administration/users/users.component.html
+++ b/src/app/components/admin-administration/users/users.component.html
@@ -19,18 +19,8 @@
       <form (ngSubmit)="onSubmit()" class="js-validate needs-validation" novalidate id="user-form" [formGroup]="userForm">
         <!-- full name -->
         <div class="row">
-          <div class="col-sm-2">
-            <div class="form-group mt-4">
-              <label class="form-label" for="civility">Civilité<span class="text-danger">*</span></label>
-              <select [ngClass]="{'is-invalid':submitted && userForm.get('civility')?.invalid}" class="form-control form-control-lg mt-n2" name="civility" id="civility" formControlName="civility"  required>
-                <option value="M." selected>M.</option>
-                <option value="Mme">Mme</option>
-                <option value="Mlle">Mlle</option>
-              </select>
-              <div *ngIf="submitted && userForm.get('civility')?.errors?.['required']" class="text-danger">
-                Merci de sélectionner votre civilité.
-              </div>
-            </div>
+          <div class="col-sm-2 mt-3">
+            <app-select-civility [civilityControl]="getCivilityControl()" [submitted]="submitted"></app-select-civility>
           </div>
 
           <div class="col-sm-5">
