--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -26,17 +26,9 @@
                       <div class="row">
                         <div class="col-sm-2">
                           <!-- Form -->
-                          <div class="mb-4 form-group">
-                            <label class="form-label" for="civility">Civilité<span class="text-danger">*</span></label>
-                            <select formControlName="civility" [ngClass]="{'is-invalid':submitted && registerForm.get('civility')?.invalid}" class="form-control form-control-lg" name="civility" id="civility" required>
-                              <option value="M." selected>M.</option>
-                              <option value="Mme">Mme</option>
-                              <option value="Mlle">Mlle</option>
-                            </select>
-                            <div *ngIf="submitted && registerForm.get('civility')?.errors?.['required']" class="text-danger">
-                              Merci de sélectionner votre civilité.
-                            </div>
-                          </div>
+                          <app-select-civility [civilityControl]="getCivilityControl()" [submitted]="submitted"></app-select-civility>
+
+
                           <!-- End Form -->
 
                         </div>
