--- a/src/app/components/user-administration/user-administration.component.html
+++ b/src/app/components/user-administration/user-administration.component.html
@@ -32,17 +32,7 @@
                         <!-- full name -->
                         <div class="row">
                           <div class="col-sm-2">
-                            <div class="mb-4 form-group">
-                              <label class="form-label" for="civility">Civilité<span class="text-danger">*</span></label>
-                              <select formControlName="civility" [ngClass]="{'is-invalid':submittedUpdateUserForm && updateUserForm.get('civility')?.invalid}" class="form-control form-control-lg" name="civility" id="civility" required>
-                                <option value="M." selected>M.</option>
-                                <option value="Mme">Mme</option>
-                                <option value="Mlle">Mlle</option>
-                              </select>
-                              <div *ngIf="submittedUpdateUserForm && updateUserForm.get('civility')?.errors?.['required']" class="text-danger">
-                                Merci de sélectionner votre civilité.
-                              </div>
-                            </div>
+                            <app-select-civility [civilityControl]="getCivilityControl()" [submitted]="submittedUpdateUserForm"></app-select-civility>
                           </div>
 
                           <div class="col-sm-5">
