--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -25,26 +25,15 @@
                       <!-- full name -->
                       <div class="row">
                         <div class="col-sm-2">
-                          <app-select-civility [civilityControl]="getCivilityControl()" [submitted]="submitted"></app-select-civility>
+                          <app-select-civility [civilityControl]="getFormControl('civility')" [submitted]="submitted"></app-select-civility>
                         </div>
 
                         <div class="col-sm-5">
-                          <app-firstname-field [firstNameControl]="getFirstNameControl()" [submitted]="submitted"></app-firstname-field>
+                          <app-firstname-field [firstNameControl]="getFormControl('firstName')" [submitted]="submitted"></app-firstname-field>
                         </div>
 
                         <div class="col-sm-5">
-                          <!-- Form -->
-                          <div class="mb-4 form-group">
-                            <label class="form-label" for="lastName">Nom<span class="text-danger">*</span></label>
-                            <input formControlName="lastName" [ngClass]="{'is-invalid':submitted && registerForm.get('lastName')?.invalid}" type="text" class="form-control form-control-lg" placeholder="Mark" aria-label="Mark" name="lastName" id="lastName" required>
-                            <div *ngIf="submitted && registerForm.get('lastName')?.errors?.['required']" class="text-danger">
-                              Merci de saisir votre nom.
-                            </div>
-                            <div *ngIf="submitted && registerForm.get('lastName')?.errors?.['minlength']" class="text-danger">
-                              Votre nom doit comporter au moins 3 lettres.
-                            </div>
-                          </div>
-                          <!-- End Form -->
+                          <app-lastname-field [lastNameControl]="getFormControl('lastName')" [submitted]="submitted"></app-lastname-field>
                         </div>
                       </div>
 
@@ -128,7 +117,7 @@
                       </div>
                       <!-- end email -->
 
-                      <app-password-field [passwordControl]="getPasswordControl()" [submitted]="submitted"></app-password-field>
+                      <app-password-field [passwordControl]="getFormControl('password')" [submitted]="submitted"></app-password-field>
 
                       <!-- confirm mot de passe -->
                       <div class="mb-4 form-group">
